# ChangeLog for dev-lang/php
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.468 2011/01/30 16:00:34 armin76 Exp $

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> php-5.2.16.ebuild,
  php-5.2.17.ebuild, php-5.3.3-r1.ebuild, php-5.3.4.ebuild, php-5.3.5.ebuild,
  php-5.3.5-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable

*php-5.3.5-r1 (29 Jan 2011)

  29 Jan 2011; Matti Bickel <mabi@gentoo.org> php-5.2.17.ebuild,
  +php-5.3.5-r1.ebuild:
  fixed bugs #327049 (phar locale failure), #348567 (crypt_r typo), #352560
  (suhosin caused circular dep), #329071 (disable phpize autoconf checks)

  11 Jan 2011; Jeroen Roovers <jer@gentoo.org> php-5.2.17.ebuild,
  php-5.3.5.ebuild:
  Stable for HPPA (bug #350908).

  10 Jan 2011; Kacper Kowalik <xarthisius.kk@gmail.com> php-5.2.17.ebuild,
  php-5.3.5.ebuild:
  ppc64 stable wrt #350908

  09 Jan 2011; Brent Baude <ranger@gentoo.org> php-5.3.5.ebuild:
  Marking php-5.3.5 ppc for bug 350908

  08 Jan 2011; Markus Meier <maekke@gentoo.org> php-5.3.5.ebuild:
  arm stable, bug #350908

  08 Jan 2011; Markus Meier <maekke@gentoo.org> php-5.2.17.ebuild:
  arm stable, bug #350908

  08 Jan 2011; Brent Baude <ranger@gentoo.org> php-5.3.5.ebuild:
  Marking php-5.3.5 ~ppc for bug 349659

  08 Jan 2011; Brent Baude <ranger@gentoo.org> php-5.2.17.ebuild:
  Marking php-5.2.17 ppc for bug 350908

  07 Jan 2011; Christian Faulhammer <fauli@gentoo.org> php-5.3.5.ebuild:
  stable x86, security bug 350908

  07 Jan 2011; Christian Faulhammer <fauli@gentoo.org> php-5.2.17.ebuild:
  stable x86, security bug 350908

  07 Jan 2011; Markos Chandras <hwoarang@gentoo.org> php-5.2.17.ebuild,
  php-5.3.5.ebuild:
  Stable on amd64 wrt bug #350908

*php-5.3.5 (06 Jan 2011)
*php-5.2.17 (06 Jan 2011)

  06 Jan 2011; Matti Bickel <mabi@gentoo.org>
  files/eblits/pkg_postinst-v2.eblit, -php-5.2.16-r1.ebuild,
  +php-5.2.17.ebuild, -php-5.3.4-r1.ebuild, +php-5.3.5.ebuild: