@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/files/eblits/Attic/pkg_postinst-v2.eblit,v 1.11 2011/02/16 08:12:28 olemarkus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/files/eblits/Attic/pkg_postinst-v2.eblit,v 1.12 2011/02/18 09:18:38 olemarkus Exp $
 
 eblit-php-pkg_postinst() {
 	# Output some general info to the user
@@ -28,19 +28,19 @@ eblit-php-pkg_postinst() {
 		fi
 	done
 
-	ewarn "You may have to recompile third-party extensions now"
-	ewarn "(includes every dev-php5/pecl-* package and probably others in that category)"
-	ewarn "Make sure that PHP_TARGETS in /etc/make.conf includes php${SLOT/./-} in order"
-	ewarn "to compile extensions for the ${SLOT} ABI"
-	ewarn
+	elog "You may have to recompile third-party extensions now"
+	elog "(includes every dev-php5/pecl-* package and probably others in that category)"
+	elog "Make sure that PHP_TARGETS in /etc/make.conf includes php${SLOT/./-} in order"
+	elog "to compile extensions for the ${SLOT} ABI"
+	elog
 	if ! use readline && use cli ; then
 		ewarn "Note that in order to use php interactivly, you need to enable"
 		ewarn "the readline USE flag or php -a will hang"
 	fi
-	ewarn
-	ewarn "This ebuild installed a version of php.ini based on php.ini-${PHP_INI_VERSION} version."
-	ewarn "You can chose which version of php.ini to install by default by setting PHP_INI_VERSION to either"
-	ewarn "'production' or 'development' in /etc/make.conf"
+	elog
+	elog "This ebuild installed a version of php.ini based on php.ini-${PHP_INI_VERSION} version."
+	elog "You can chose which version of php.ini to install by default by setting PHP_INI_VERSION to either"
+	elog "'production' or 'development' in /etc/make.conf"
 	ewarn "Both versions of php.ini can be found in /usr/share/doc/${PF}"
 
 	# check for not yet migrated old style config dirs
@@ -49,8 +49,16 @@ eblit-php-pkg_postinst() {
 		ewarn "Make sure to migrate your config files, starting with php-5.3.4 and php-5.2.16 config"
 		ewarn "files are now kept at ${ROOT}etc/php/{apache2,cli,cgi,fpm}-php5.x"
 	fi
-	ewarn
-	ewarn "For more details on how minor version slotting works (PHP_TARGETS) please read the upgrade guide:"
-	ewarn "http://www.gentoo.org/proj/en/php/php-upgrading.xml"
+	elog
+	elog "For more details on how minor version slotting works (PHP_TARGETS) please read the upgrade guide:"
+	elog "http://www.gentoo.org/proj/en/php/php-upgrading.xml"
+	elog
+
+	if ( [[ -z SUHOSIN_VERSION ]] && use suhosin && version_is_at_least 5.3.6_rc1 ) ; then
+		ewarn "The suhosin USE flag now only installs the suhosin patch!"
+		ewarn "If you want the suhosin extension, make sure you install"
+		ewarn " dev-php5/suhosin"
+		ewarn
+	fi
 }
 
