@@ -25,6 +25,7 @@
 		<flag name='reflection'>Enable the reflection extension (Reflection API) (deprecated: always "on" in php 5.3)</flag>
 		<flag name='spl'>Adds support for the Standard PHP Library (deprecated: always "on" in php 5.3)</flag>
 		<flag name='suhosin'>Add Suhosin support (patch and extension from http://www.suhosin.org/)</flag>
+		<flag restrict="&gt;=dev-lang/php-5.3.6_rc1" name='suhosin'>Add the Suhosin patch  from http://www.suhosin.org/)</flag>
 		<flag name='xmlreader'>Enable XMLReader support</flag>
 		<flag name='xmlwriter'>Enable XMLWriter support</flag>
 		<flag name='zip'>Enable ZIP file support</flag>
