@@ -1,6 +1,14 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.468 2011/01/30 16:00:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.469 2011/02/18 09:18:37 olemarkus Exp $
+
+  17 Feb 2011; Ole Markus With <olemarkus@gentoo.org> +php-5.3.6_rc1.ebuild,
+  metadata.xml:
+  Added an ebuild for 5.3.6 RC1
+  The suhosin USE flag no longer installs the extension, only the suhosin
+  patch
+
+*php-5.3.6_rc1 (17 Feb 2011)
 
   30 Jan 2011; Raúl Porcel <armin76@gentoo.org> php-5.2.16.ebuild,
   php-5.2.17.ebuild, php-5.3.3-r1.ebuild, php-5.3.4.ebuild, php-5.3.5.ebuild,
